feat: Increase multi-snippet character limit and update app version
This commit increases the maximum character limit for the multi-snippet input field from 4,000 to 30,000 characters.

Additionally, the application version has been updated to 1.1 (version code 2), and the release APK is now named `offline-snippet-reminder.apk`.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ build/
 
 # Local configuration
 local.properties
+/app/release/offline-snippet-reminder.apk
+/app/release/baselineProfiles/0/offline-snippet-reminder.dm
+/app/release/baselineProfiles/1/offline-snippet-reminder.dm
+/app/release/output-metadata.json
